--- a/typescript/package.json
+++ b/typescript/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^18.7.18",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "axios": "^0.27.2"
   }
 }
