--- a/javascript/package.json
+++ b/javascript/package.json
@@ -7,5 +7,10 @@
     "start": "node main.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.2"
+  }
 }
