RED2-839: Added backend

--- a/redkik-embedded-example/redkik-embedded-example-frontend/package.json
+++ b/redkik-embedded-example/redkik-embedded-example-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redkik-ff-demo",
+  "name": "redkik-embedded-example-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:4000"
 }
