--- a/redkik-embedded-example/redkik-embedded-example-frontend/package.json
+++ b/redkik-embedded-example/redkik-embedded-example-frontend/package.json
@@ -16,6 +16,7 @@
     "styled-components": "^5.3.5"
   },
   "scripts": {
+    "prestart": "npm install",
     "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
